--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,6 @@ jobs:
       uses: actions/upload-artifact@v6.0.0
       with:
         name: Surefire Reports
-        path: target/surfire-reports/
+        path: target/surefire-reports/
         retention-days: 10
 
