--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,14 @@ on:
         options: [qa,uat,dev]
         default: qa
         required: true
+
+      suiteXmlFile:
+        description: "Testng xml file"
+        type: choice
+        options: [testng.xml,smoke.xml,regrssion.xml]
+        default: testng.xml
+        required: true
+
         
 
 jobs:
@@ -33,7 +41,7 @@ jobs:
         cache: maven
    
     - name: Execute Test Automation Framework
-      run: mvn clean test -DsuiteXmlFile=testng.xml -Denv="${{ github.event.inputs.env || 'qa' }}"
+      run: mvn clean test -DsuiteXmlFile=${{ github.event.inputs.suiteXmlFile || 'testng.xml' }}" -Denv="${{ github.event.inputs.env || 'qa' }}"
 
     - name: Upload a Build Artifact
       if: always()
