--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,10 @@ jobs:
         cache: maven
    
     - name: Execute Test Automation Framework
-      run: mvn clean test -DsuiteXmlFile=${{ github.event.inputs.suiteXmlFile || 'testng.xml' }}" -Denv="${{ github.event.inputs.env || 'qa' }}"
-
+      run: mvn clean test \
+       -DsuiteXmlFile=${{ github.event.inputs.suiteXmlFile || 'testng.xml' }} \
+       -Denv=${{ github.event.inputs.env || 'qa' }}
+  
     - name: Upload a Build Artifact
       if: always()
       uses: actions/upload-artifact@v6.0.0
