--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,7 @@ jobs:
         cache: maven
    
     - name: Execute Test Automation Framework
-      run: mvn clean test \
-       -DsuiteXmlFile=${{ github.event.inputs.suiteXmlFile || 'testng.xml' }} \
-       -Denv=${{ github.event.inputs.env || 'qa' }}
+      run: mvn clean test -DsuiteXmlFile=${{ github.event.inputs.suiteXmlFile || 'testng.xml' }} -Denv=${{ github.event.inputs.env || 'qa' }}
   
     - name: Upload a Build Artifact
       if: always()
